@startuml
note as n3
The abstract creator is the object IkeaCreator();
The abstract creator has many creator methods;
end note

note as n1
<b>Could be added:</b>
* New factories:
    TokStokCreator,
    CampoLargoCreator,
    ...
* New products:
    Table,
    Wardrobe,
    ...
* New product features:
    PrettyTable,
    ComfortableWardrobe,
    ...
end note

note as n2
const creator = new IkeaCreator();
const chair = creator.createChair();
end note

interface Creator {
    + createChair(): Chair;
'    + createTable(): Table;
'    + createWardrobe(): Wardrobe;
}

class IkeaCreator implements Creator {
    + createChair(): Chair {}
'    + createTable(): Table {}
}

'class TokStokCreator implements Creator {
'    + createChair(): Chair {}
'    + createTable(): Table {}
'}

'class CampoLargoCreator implements Creator {
'    + createChair(): Chair {}
'    + createTable(): Table {}
'}

interface Chair {
    + style(): string;
}

'interface Table {
'    + style(): string;
'}

'interface Wardrobe {
'    + style(): string;
'}

class IkeaChair implements Chair {
    + style(): string {\n    return "ikea-style";\n}
}

'class IkeaTable implements Table {
'    + style(): string {\n    return "ikea-style";\n}
'}

'class IkeaWardrobe implements Wardrobe {
'    + style(): string {\n    return "ikea-style";\n}
'}

'class TokStokChair implements Chair {
'    + style(): string {\n    return "tokstok-style";\n}
'}

'class TokStokTable implements Table {
'    + style(): string {\n    return "tokstok-style";\n}
'}

'class TokStokWardrobe implements Wardrobe {
'    + style(): string {\n    return "tokstok-style";\n}
'}

'class CampoLargoChair implements Chair {
'    + style(): string {\n    return "campo-largo-style";\n}
'}

'class CampoLargoTable implements Table {
'    + style(): string {\n    return "campo-largo-style";\n}
'}

'class CampoLargoWardrobe implements Wardrobe {
'    + style(): string {\n    return "campo-largo-style";\n}
'}

Creator <-- Chair
'Creator <-- Table
'Creator <-- Wardrobe

IkeaCreator o-- IkeaChair
'IkeaCreator o-- IkeaTable
'IkeaCreator o-- IkeaWardrobe

'TokStokCreator o-- TokStokChair
'TokStokCreator o-- TokStokTable
'TokStokCreator o-- TokStokWardrobe

'CampoLargoCreator o-- CampoLargoChair
'CampoLargoCreator o-- CampoLargoTable
'CampoLargoCreator o-- CampoLargoWardrobe
@enduml